@startuml

title __SECURITY's Class Diagram__\n

  namespace tech.eportfolio.server {
    namespace security {
      class tech.eportfolio.server.security.JWTAuthenticationEntryPoint {
          + commence()
      }
    }
  }
  

  namespace tech.eportfolio.server {
    namespace security {
      class tech.eportfolio.server.security.JWTAuthorizationFilter {
          - refreshKey : String
          - signKey : String
          + JWTAuthorizationFilter()
          # doFilterInternal()
      }
    }
  }
  

  namespace tech.eportfolio.server {
    namespace security {
      class tech.eportfolio.server.security.JwtAccessDeniedHandler {
          + handle()
      }
    }
  }
  

  tech.eportfolio.server.security.JWTAuthenticationEntryPoint .up.|> org.springframework.security.web.AuthenticationEntryPoint
  tech.eportfolio.server.security.JWTAuthorizationFilter -up-|> org.springframework.web.filter.OncePerRequestFilter
  tech.eportfolio.server.security.JWTAuthorizationFilter o-- tech.eportfolio.server.common.utility.JWTTokenProvider : jwtTokenProvider
  tech.eportfolio.server.security.JwtAccessDeniedHandler .up.|> org.springframework.security.web.access.AccessDeniedHandler


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
